Fix alignment of card footer links

--- a/app/components/ui/my-domains/domain-card/styles.scss
+++ b/app/components/ui/my-domains/domain-card/styles.scss
@@ -57,12 +57,14 @@
 }
 
 .card-footer {
+	align-items: center;
 	align-self: flex-end;
 	border-top: 1px solid $gray-light;
 	box-sizing: border-box;
 	display: flex;
 	font-size: 1.4rem;
 	justify-content: space-between;
+	line-height: 3rem;
 	padding: 5px 20px;
 	width: 100%;
 }
